--- a/Thread1.ipynb
+++ b/Thread1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,19 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def daemon():\n",
-    "    logging.debug('Starting')\n",
+    "    logging.debug('Starting daemon')\n",
     "    time.sleep(5)\n",
-    "    logging.debug('Exiting')"
+    "    logging.debug('Exiting daemon')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,18 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def non_daemon():\n",
-    "    logging.debug('Starting')\n",
-    "    logging.debug('Exiting')"
+    "    logging.debug('Starting non daemon')\n",
+    "    logging.debug('Exiting non daemon')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(daemon    ) Starting\n",
-      "(non-daemon) Starting\n",
-      "(non-daemon) Exiting\n"
+      "(daemon    ) Starting daemon\n",
+      "(non-daemon) Starting non daemon\n",
+      "(non-daemon) Exiting non daemon\n"
      ]
     }
    ],
@@ -84,14 +84,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "is alive? False\n"
+      "is alive? True\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(daemon    ) Exiting daemon\n"
      ]
     }
    ],
